FTB-Community/force-app/main/default/objects/FTB_Session__c/FTB_Session__c.object-meta.xml
<CustomObject>
    <description>FTB Object to track user session</description>
    <label>User Session</label>
    <nameField>
        <displayFormat>FTBS -{00000000}</displayFormat>
        <label>Session Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>