FTB-Community/force-app/main/default/objects/FTB_Session__c/fields/FTB_ClosedDateTime__c.field-meta.xml
<CustomField>
    <fullName>FTB_ClosedDateTime__c</fullName>
    <label>Closed Date/Time</label>
    <type>DateTime</type>
</CustomField>