FTB-Community/force-app/main/default/objects/FTB_Session__c/fields/FTB_IsActive__c.field-meta.xml
<CustomField>
    <fullName>FTB_IsActive__c</fullName>
    <formula>IF(NOT(ISBLANK(FTB_ClosedDateTime__c)), false,(NOW() - LastModifiedDate) &lt; 2.4 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>