FTB-Community/force-app/main/default/objects/FTB_Session__c/fields/FTB_SessionId__c.field-meta.xml
<CustomField>
    <fullName>FTB_SessionId__c</fullName>
    <externalId>true</externalId>
    <label>Session Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>