FTB-Community/force-app/main/default/objects/FTB_Session__c/fields/FTB_User__c.field-meta.xml
<CustomField>
    <fullName>FTB_User__c</fullName>
    <label>User</label>
    <referenceTo>FTB_User__c</referenceTo>
    <relationshipLabel>FTB_Session</relationshipLabel>
    <relationshipName>FTB_Session</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>